--- a/css/styles.css
+++ b/css/styles.css
@@ -68,6 +68,10 @@ body {
     color: var(--accent-color);
 }
 
+.current-page {
+    color: var(--accent-color);
+}
+
 /* Контакти-хедер */
 .link-mail,
 .link-tel {
