--- a/css/styles.css
+++ b/css/styles.css
@@ -165,6 +165,39 @@ body {
     background-color: var(--background-secondary-grey-color);
 }
 
+/* Фільтр-портфоліо */
+.portfolio-btn {
+    font-family: inherit;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.63;
+    text-align: center;
+    letter-spacing: 0.03em;
+    cursor: pointer;
+    color: var(--main-text-color);
+    background-color: var(--background-secondary-grey-color);
+}
+
+.portfolio-btn:hover,
+.portfolio-btn:focus {
+    color: var(--white-font-color);
+    background-color: var(--accent-color);
+}
+
+/* Портфоліо */
+.portfolio-list-title {
+    font-size: 18px;
+    line-height: 2;
+    letter-spacing: 0.06em;
+}
+
+.portfolio-list-text {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.88;
+    color: var(--secondary-text-color);
+}
+
 /* =====Мейн контент-кінець===== */
 
 /* =====Футер-початок===== */
